Removed password update from profile update
